IOstream impl finished

--- a/lib/BUILD
+++ b/lib/BUILD
@@ -1,8 +1,9 @@
 cc_library(
 	name = "lib_lzw",
-	srcs = ["decompress.cpp"],
+	srcs = ["iostream_impl.cpp"],
 	hdrs = [
-		"decompress.hpp"
+		"decoder.hpp",
+		"iostream_impl.hpp"
 	],
 	visibility = ["//main:__pkg__"],
 )
