--- a/src/BUILD
+++ b/src/BUILD
@@ -1,9 +1,19 @@
 cc_library(
-	name = "lzw_iostream_lib",
-	srcs = ["iostream_impl.cpp"],
+	name = "decompress_lib",
+	srcs = ["decompress.cpp"],
 	hdrs = [
 		"decoder.hpp",
-		"iostream_impl.hpp"
+		"decompress.hpp"
 	],
 	visibility = ["//main:__pkg__", "//test:__pkg__"],
+)
+
+cc_binary(
+	name = "decompressor",
+	srcs = [
+		"main.cpp"
+	],
+	deps = [
+		"decompress_lib"
+	]
 )
